// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox render should render correctly 1`] = `
<Fragment>
  <Text
    items={Array []}
    onChange={[Function]}
    onSubmit={[Function]}
    value=""
  />
</Fragment>
`;

exports[`Checkbox render should render correctly placeholder 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="some placeholder"
    selections={Array []}
    variant="checkbox"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={true}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Checkbox render should render correctly with items 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    selections={Array []}
    variant="checkbox"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and default object value 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    selections={
      Array [
        "some-value",
      ]
    }
    variant="checkbox"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and default value 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    selections={
      Array [
        "some-value",
      ]
    }
    variant="checkbox"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and selected value 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    selections={Array []}
    variant="checkbox"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={true}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Component>
</Fragment>
`;
